# ecommerce_django_api

./: Dockerfile  Makefile  TODO  db.sqlite3  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  setup.cfg
apps/: admin.py  documents.py  models.py  serializers.py  urls.py  views.py
apps/migrations/: 0001_initial.py
nginx/: nginx.conf
root/: settings.py  urls.py
